--- a/includes/blocks/solutions-grid/style.css
+++ b/includes/blocks/solutions-grid/style.css
@@ -1,6 +1,6 @@
 .solutions.stage {
     display: grid;
-    column-gap: 20px;
+    column-gap: 24px;
     grid-template-columns: repeat(4, 1fr);
     margin-top: 120px;
 }
